@@ -1,6 +1,9 @@
 2012-12-24 Graeme Gott <graeme@gottcode.org>
 	* Add support for compiling with Qt 5.0.0.
 
+2010-12-03 Graeme Gott <graeme@gottcode.org>
+	* Update daily and minimum values.
+
 2010-11-28 Graeme Gott <graeme@gottcode.org>
 	* Add daily graph.
 	* Stop hardcoding row values.
